--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,7 @@ services:
     ports:
       - "8080:8080"
     restart: unless-stopped
+    image: ainnect-backend:fixed
 
 volumes:
   mysql_data: {}
