fix config craco

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,7 +32,8 @@
   },
   "scripts": {
     "start": "craco start",
-    "build": "craco build",
+    "build": "CI=false craco build",
+    "build:ci": "craco build",
     "test": "craco test",
     "eject": "react-scripts eject"
   },
