--- a/backend/.env
+++ b/backend/.env
@@ -13,7 +13,7 @@ SPRING_SERVLET_MULTIPART_MAX_FILE_SIZE=100MB
 SPRING_SERVLET_MULTIPART_MAX_REQUEST_SIZE=100MB
 SPRING_SERVLET_MULTIPART_ENABLED=true
 SPRING_SERVLET_MULTIPART_FILE_SIZE_THRESHOLD=2KB
-SPRING_SERVLET_MULTIPART_LOCATION=${java.io.tmpdir}
+# SPRING_SERVLET_MULTIPART_LOCATION=${java.io.tmpdir}
 
 SERVER_PORT=8080
 
