add UrlNormalizationFilter and handle staging deployment

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,7 @@
 # syntax=docker/dockerfile:1.7
 
 ########## BUILD STAGE ##########
-FROM maven:3.9-eclipse-temurin-21 AS build
+FROM maven:3.9-eclipse-temurin-17 AS build
 WORKDIR /app
 
 # Chỉ copy pom trước để cache dependency
@@ -17,11 +17,12 @@ RUN --mount=type=cache,target=/root/.m2 \
     mvn -q -DskipTests -B clean package
 
 ########## RUNTIME STAGE ##########
-FROM eclipse-temurin:21-jre
+FROM eclipse-temurin:17-jre
 WORKDIR /app
 
 # Copy đúng file jar đã repackage (đảm bảo chạy được bằng java -jar)
-COPY --from=build /app/target/*.jar /app/app.jar
+# Lưu ý: tránh match file *.jar.original
+COPY --from=build /app/target/*-SNAPSHOT.jar /app/app.jar
 
 # Tùy chọn: cấu hình JVM
 ENV JAVA_OPTS=""
